--- a/index.html
+++ b/index.html
@@ -69,16 +69,60 @@
                 <img src="./img/grid/winterBall.jpg" alt="">
             </div>
             <div class="grid-item item-5">
-                <p>захист твоїх прав</p>
+                <img src="./img/grid/studigital.jpg" alt="">
             </div>
             <div class="grid-item item-6">
                 <img src="./img/grid/party.jpg" alt="">
             </div>
             <div class="grid-item item-7">
-                <p>круті проєкти та івенти</p>
+                <p>права, розвиток, освіта</p>
             </div>
         </div>
     </section>
+    <secttion class="qa-section">
+        <div class="qa-container">
+
+            <div class="part-container">
+                <p class="qa-title">Головний корпус (2-54)</p>
+                <div class="map-container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2564.476170427673!2d36.226499815796636!3d50.002429679416025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0e174ac7031%3A0x551bae5250a923c6!2zU3ZvYm9keSBTcXVhcmUsIDQsIEtoYXJraXYsINCl0LDRgNC60ZbQstGB0YzQutCwLCA2MTAwMA!5e0!3m2!1sen!2sua!4v1670093529042!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+
+            <div class="part-container">
+                <p class="qa-title">Маєш питання?</p>
+                <div class="form-container">
+                    <form action="#">
+                        <div>
+                            <label for="name">Ім'я та прізвище</label>
+                            <input type="text" name="name" id="name" placeholder="Повністю">
+                        </div>
+                        <div>
+                            <label for="mail">Корпоративна пошта</label>
+                            <input type="mail" name="mail" id="mail" placeholder="example@student.karazin.ua">
+                        </div>
+                        <div>
+                            <label for="request">Ваше питання</label>
+                            <textarea name="request" id="request" placeholder="Напиши будь-що"></textarea>
+                        </div>
+                        <div class="button-container">
+                            <button class="form-button" type="submit">Надіслати</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </secttion>
+
+<footer>
+   <h3>Created by Mykyta Kucherov</h3> 
+   <div class="social-media-container">
+    <ul>
+        <li><a href="https://github.com/kucherov02">github</a></li>
+        <li><a href="https://www.instagram.com/kucherooov/">instagram</a></li>
+    </ul>
+   </div>
+</footer>
 
     <script src="./script.js"></script>
 </body>
